force-app/main/default/objects/Send_To_Slack__c/Send_To_Slack__c.object-meta.xml
<CustomObject>
    <label>Send To Slack</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Send To Slack Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send To Slack</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>