force-app/main/default/objects/Send_To_Slack__c/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <label>Channel ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>