force-app/main/default/objects/Send_To_Slack__c/fields/Rich_Text_Message__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Message__c</fullName>
    <label>Rich Text Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>