force-app/main/default/objects/Send_To_Slack__c/fields/Text_Message__c.field-meta.xml
<CustomField>
    <fullName>Text_Message__c</fullName>
    <label>Text Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>